fixed gmail buttons and appsus buttons overlapping

--- a/assets/css/apps/book/cmps/book-list.css
+++ b/assets/css/apps/book/cmps/book-list.css
@@ -1,53 +1,53 @@
 .book-list {
-    padding: var(--paddingGap) 0 0;
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    gap: var(--paddingGap);
+  padding: var(--paddingGap) 0 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: var(--paddingGap);
 }
 
 .book-list li {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    /* background-color: var(--clr1bg); */
-    background-color: #5b87b2;
-    color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: var(--clr1bg); */
+  background-color: #5b87b2;
+  color: white;
 }
 
-.btnLook {
-    background-color: #2a3d50;
-    color: white;
-    transition: all 0.2s ease-in-out;
-    transform: translateY(0);
-  }
-  
-  .btnLook:hover {
-    background-color: #0c1117;
-    color: white;
-    transform: translateY(-2px);
-  }
-  
-  .book-list .flex button {
-    background-color: #2a3d50;
-    color: white;
-    transition: all 0.2s ease-in-out;
-    transform: translateY(0);
-  }
-  
-  .book-list .flex button:hover {
-    background-color: #0c1117;
-    color: white;
-    transform: translateY(-2px);
-  }
-  
+.miss-books .btnLook {
+  background-color: #2a3d50;
+  color: white;
+  transition: all 0.2s ease-in-out;
+  transform: translateY(0);
+}
+
+.miss-books .btnLook:hover {
+  background-color: #0c1117;
+  color: white;
+  transform: translateY(-2px);
+}
+
+.book-list .flex button {
+  background-color: #2a3d50;
+  color: white;
+  transition: all 0.2s ease-in-out;
+  transform: translateY(0);
+}
+
+.book-list .flex button:hover {
+  background-color: #0c1117;
+  color: white;
+  transform: translateY(-2px);
+}
+
 
 
 .book-list li>*:last-child() {
-    justify-self: flex-end;
+  justify-self: flex-end;
 }
 
 section .flex {
-    align-items: center;
+  align-items: center;
 }
